--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,18 @@
 <!-- HEEADER------------------------------------------------------------------------ -->
 <app-particle-animation></app-particle-animation>
+
+<div class="scrollDownHomeLeft">
+    <span>
+        Scroll down
+    </span>
+    <fa-icon [icon]="faArrowDown"></fa-icon>
+</div>
+<div class="scrollDownHomeRight">
+    <span>
+        Scroll down
+    </span>
+    <fa-icon [icon]="faArrowDown"></fa-icon>
+</div>
 <!-- about------------------------------------------------------------------------ -->
 <section class="aboutMe">
     <div class="aboutMeContainer">
