--- a/src/app/components/particle-animation/particle-animation.component.html
+++ b/src/app/components/particle-animation/particle-animation.component.html
@@ -1,2 +1,2 @@
 <canvas #scene></canvas>
-<input #copy type="text" value="ALE WEB DEV" />
+<input #copy id="copy" type="text" value="ALE WEB DEV" />
