--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,6 +61,9 @@ canvas{
   width: 100vw;
   height: 100vh;
 }
+#copy{
+  display: none;
+}
 .displayNone {
   display: none;
 }
@@ -169,7 +172,19 @@ header {
  justify-content: end;
  z-index: 3;
 }
-.scrollDown span{
+.scrollDownHomeLeft{
+  position:absolute;
+  left: 5%;
+  bottom: 5%;
+  z-index: 3;
+ }
+ .scrollDownHomeRight{
+  position:absolute;
+  right: 5%;
+  bottom: 5%;
+  z-index: 3;
+ }
+.scrollDown span, .scrollDownHomeLeft span, .scrollDownHomeRight span{
   display: flex;
   color: $backgroundColorDarkThird;
   font-size: 1.3rem;
@@ -180,7 +195,7 @@ header {
   animation-duration: 2s;
   animation-iteration-count: infinite;
 }
-.scrollDown fa-icon{
+.scrollDown fa-icon, .scrollDownHomeLeft fa-icon, .scrollDownHomeRight fa-icon{
   font-size: 1.3rem;
   text-align: center;
   color: $customBlue;
@@ -228,7 +243,7 @@ header {
   top: 400px;
   left: 0;
   border-right: 1px solid $TextColorGlobalSecundary;
-  border-bottom: 1px solid $TextColorGlobalSecundary;
+  // border-bottom: 1px solid $TextColorGlobalSecundary;
   
 }
 
@@ -245,18 +260,17 @@ header {
   border-left: 1px solid $TextColorGlobalSecundary;
 }
 
-#youtube {
-  top: 450px;
-  right: 0;
-  border-left: 1px solid $TextColorGlobalSecundary;
-}
-
 #github {
-  top: 500px;
+  top: 450px;
   right: 0;
   border-bottom: 1px solid $TextColorGlobalSecundary;
   border-left: 1px solid $TextColorGlobalSecundary;
 }
+// #youtube {
+//   top: 450px;
+//   right: 0;
+//   border-left: 1px solid $TextColorGlobalSecundary;
+// }
 .socialIcons {
   color: $backgroundColorGlobalSecundary;
   margin: 0;
@@ -269,6 +283,7 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   height: 70px;
   width: 100%;
   border-bottom: 1px solid $TextColorGlobalSecundary;
@@ -278,16 +293,23 @@ nav {
   transition-duration: 500ms;
   z-index: 5;
 }
-nav ul {
+
+#btnsMenu {
   display: flex;
   justify-content: end;
-  width: 65%;
+  width: 85%;
 }
-nav ul #homeBtnMenu {
-  margin-right: 70%;
+
+#btnsMenu li {
+  padding-left: 2%;
 }
+
+#homeBtnMenu {
+  justify-content: start;
+  width: 5%;
+}
+
 nav li {
-  margin: 25px;
   font-family: $textFontGeneral;
   font-weight: bold;
   list-style-type: none;
@@ -296,13 +318,11 @@ nav a {
   text-decoration: none;
   color: $TextColorGlobalSecundary;
   font-size: 15px;
-  padding: 5px;
-  border: 2px solid transparent;
   transition: all 400ms;
 }
 nav a:hover,
 .actived {
-  border: 2px solid $customBlue;
+  // border: 2px solid $customBlue;
 }
 .hide{
   color: $TextColorGlobalSecundary;
@@ -978,20 +998,20 @@ form input[type="submit"]:hover {
   }
   
   #day {
-    top: 350px;
+    top: 300px;
   }
 
   #night {
-    top: 300px;
+    top: 350px;
   }
 
   #linkedin {
-    top: 250px;
-  }
-
-  #youtube {
     top: 300px;
   }
+
+  // #youtube {
+  //   top: 300px;
+  // }
 
   #github {
     top: 350px;
@@ -1003,16 +1023,6 @@ form input[type="submit"]:hover {
   nav{
     height: 50px;
   }
-   nav ul {
-    width: 70%;
-  }
-  nav ul #homeBtnMenu {
-    margin-right: 55%;
-  }
-  nav li{
-    margin: 15px;
-  }
-
   
   #imgCreateProject, #imgContactProject{
     background-size: cover;
