cursor effect done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div class="cursor"></div>
+<div class="cursor2"></div>
+
 <ng-container *ngIf="!isHomePage">
   <video #video id="myVideo">
     <source src="../assets/media/videoBG.mp4" type="video/mp4">
