--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,6 +13,22 @@
     </span>
     <fa-icon [icon]="faArrowDown"></fa-icon>
 </div>
+<div class="containerHero2">
+    <span id="" class="titleHome1">
+        Hi there!
+    </span>
+    <span id="" class="titleHome2">
+        I'm
+    </span>
+    <span id="" class="titleHome3">
+        I'm a web developer.
+    </span>
+    <span id="" class="titleHome3">
+        <a [routerLink]="['/projects']" fragment="projectsTitle"><span class="linkBGdark">View my work <fa-icon
+                    [icon]="faArrowRight"></fa-icon></span></a>
+    </span>
+</div>
+
 <!-- about------------------------------------------------------------------------ -->
 <section class="aboutMe">
     <div class="aboutMeContainer">
