--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,10 @@ $titleFontSubtract: "Jaapokkisubtract-Regular";
 }
 $textFontGeneral: "MavenPro-Regular";
 
+@mixin cursor-transform {
+  transform: translate(-50%, -50%) scale(1.5);
+}
+
 /*General styles*/
 * {
   margin: 0;
@@ -36,7 +40,9 @@ body {
   font-family: $textFontGeneral;
   margin: 0px;
   overflow-x: hidden;
+  cursor: none;
 }
+
 /*global colors*/
 $backgroundColorGlobalPrimary: #ffffff;
 $backgroundColorGlobalSecundary: #f4f4f6;
@@ -56,6 +62,7 @@ $errorRed: rgba(255, 0, 0, 0.705);
   filter: brightness(20%); //mas oscura
   transition: all 400ms;
 }
+
 canvas{
   background: $TextColorGlobalPrimary;
   width: 100vw;
@@ -64,6 +71,31 @@ canvas{
 #copy{
   display: none;
 }
+.cursor{
+  position: fixed;
+  width: 25px;
+  height: 25px;
+  border: 1px solid #c6c6c6;
+  border-radius: 50%;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  z-index: 6;
+}
+
+.cursor2{
+  position: fixed;
+  width: 8px;
+  height: 8px;
+  background-color: #c6c6c6;
+  border-radius: 50%;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  z-index: 6;
+} 
 .displayNone {
   display: none;
 }
@@ -113,6 +145,8 @@ canvas{
 
 a{
   text-decoration: none;
+  cursor: none;
+
 }
 
 /*Header-----------------------------------------------------------------------------*/
@@ -223,6 +257,24 @@ header {
      bottom: 50px;
   }
 }
+
+/*---------header2--------------*/
+.containerHero2{
+  display: flex;
+
+}
+.titleHome1{
+
+}
+.titleHome2{
+  font-family: $titleFont;
+  font-size: 1.5em;
+  color: $TextColorGlobalSecundary;
+  justify-content: center;
+}
+.titleHome3{
+
+}
 /*---------------------------------sideBars-------------------------------------*/
 .boxSideBars {
   position: fixed;
@@ -230,7 +282,7 @@ header {
   width: 50px;
   background-color: $backgroundColorDarkPrimary;
   border-top: 1px solid $TextColorGlobalSecundary;
-  cursor: pointer;
+  cursor: none;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -238,7 +290,9 @@ header {
 }
 .boxSideBars:hover fa-icon{
  color: $customBlue;
+ cursor: none;
 }
+
 #day {
   top: 400px;
   left: 0;
@@ -319,10 +373,17 @@ nav a {
   color: $TextColorGlobalSecundary;
   font-size: 15px;
   transition: all 400ms;
+  z-index: 7;
 }
-nav a:hover,
-.actived {
-  // border: 2px solid $customBlue;
+nav a:hover{
+  color: $backgroundColorFormBox;
+}
+nav a:hover ~ .cursor{
+  background-color: red!important; /* just for demonstration purposes */
+}
+
+.actived{
+  color: $customBlue;
 }
 .hide{
   color: $TextColorGlobalSecundary;
@@ -353,7 +414,7 @@ footer {
   text-decoration: none;
   color: $customBlue;
   transition: all 400ms ease;
-  cursor: pointer;
+  cursor: none;
 }
 .linkBGdark:hover{
   color: $backgroundColorGlobalPrimary;
@@ -362,7 +423,7 @@ footer {
   text-decoration: none;
   color: $customBlue;
   transition: all 400ms ease;
-  cursor: pointer;
+  cursor: none;
 }
 .linkBGwhite:hover{
   color: $backgroundColorDarkPrimary;
@@ -769,7 +830,7 @@ form input[type="submit"]:hover {
     width: 100%;
     border-radius: 0 0 10px 0;
     color: $backgroundColorGlobalPrimary;
-    cursor: pointer;
+    cursor: none;
    transition: all 400ms ease;
  }
  .tooltip .info button:hover{
@@ -939,7 +1000,7 @@ form input[type="submit"]:hover {
   background-color: $backgroundColorDarkSecundary;
   color: $backgroundColorGlobalSecundary;
   padding: 10px;
-  cursor: pointer;
+  cursor: none;
   transition: all 400ms ease;
 
 }
@@ -957,7 +1018,7 @@ form input[type="submit"]:hover {
   background-color: $backgroundColorDarkPrimary;
   margin-top: 3px;
   color: $backgroundColorGlobalPrimary;
-  cursor: pointer;
+  cursor: none;
   transition: all 400ms ease;
 
 }
@@ -1195,3 +1256,6 @@ form input[type="submit"]:hover {
     display: none;
   }
 }
+
+
+
