ChatGPT in progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,7 +79,8 @@
     <li><a [routerLink]="['/projects']" fragment="projectsTitle" [routerLinkActive]="['actived']">PROJECTS</a></li>
     <!-- <li><a [routerLink]="['/create']" [routerLinkActive]="['actived']">CREATE</a></li> -->
     <li><a [routerLink]="['/contact']" fragment="createProject" [routerLinkActive]="['actived']">CONTACT</a></li>
-    <li><a href="/assets/media/ManuelAlejandroCV.pdf" [routerLinkActive]="['actived']" target="blank">RESUME</a></li>
+    <!-- <li><a href="/assets/media/ManuelAlejandroCV.pdf" [routerLinkActive]="['actived']" target="blank">RESUME</a></li> -->
+    <li><a [routerLink]="['/chatbot']" fragment="chatbot" [routerLinkActive]="['actived']">CHATBOT</a></li>
   </ul>
   <div class="hide">
     <fa-icon [icon]="faBars"></fa-icon>
