--- a/src/app/components/mega-text-video/mega-text-video.component.html
+++ b/src/app/components/mega-text-video/mega-text-video.component.html
@@ -1,4 +1,8 @@
 <!-- <img src="../../../assets/media/WORK.png" alt="WORK" class="mask">  -->
+<div class="containerSubTitleProjectWord">
+    <span class="subTitleProjectWord">Let me show you <a [routerLink]="['/projects']" fragment="projectsTitle"><span
+                class="linkBGdark">some of my </span></a></span>
+</div>
 
 
 <header #headerE1>
@@ -10,9 +14,15 @@
         <defs>
             <mask id="mask" x="0" y="0" width="100%" height="100%">
                 <rect x="0" y="0" width="100%" height="100%" />
-                <text x="50%" y="50" text-anchor="middle" dominant-baseline="middle">WORK</text>
+                <text #headerText id="header-text" x="50%" y="50" text-anchor="middle"
+                    dominant-baseline="middle">WORK</text>
             </mask>
         </defs>
         <rect x="0" y="0" width="100%" height="100%" />
     </svg>
 </header>
+
+<div class="containerSubTitleProjectWord2">
+    <span class="subTitleProjectWord2">See <a [routerLink]="['/projects']" fragment="projectsTitle"><span
+                class="linkBGdark">details <fa-icon [icon]="faArrowRight"></fa-icon></span></a></span>
+</div>
