--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,3 +1,4 @@
+<app-header [title]="'CONTACT'"></app-header>
 <div id="createProject">
     <div id="imgContactProject">
         <fa-icon [icon]="faMapMarkerAlt" id="faMapMarkerAlt" (mouseover)="changeClass=true"
@@ -17,8 +18,8 @@
                         (626) 243 6274</a> and if you prefer
                     also can get
                     in touch with me through <a href="mailto:info@alejandroalonzo.com"
-                        target="_blank">info@alejandroalonzo.com</a></span>
-                <span class="adress">660 N San Fernando RD, LOS ANGELES, CALIFORNIA 90065 </span>
+                        target="_blank">alejandro.12w@gmail.com</a></span>
+                <span class="adress">LOS ANGELES, CALIFORNIA 90020 </span>
                 <div class="containerBtn">
                     <a href="https://goo.gl/maps/JxnfjFpTL3JMupHq9" target="_blank" rel="noopener noreferrer">
                         <button>Open in Google Maps</button></a>
