--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,3 +1,4 @@
+<app-header [title]="'PROJECTS'"></app-header>
 <div class="portfolioPage">
     <div class="containerTitle">
         <h2 id="projectsTitle" data-aos="fade-down" data-aos-duration="2000">
@@ -40,13 +41,4 @@
 
 
 <!-- footer------------------------------------------------------------------------ -->
-<footer>
-    <div class="footerTextContainer">
-        <div class="footerText">
-            Wanna get in touch or talk about a project?</div>
-        <div class="footerText">
-            Feel free to drop a line in the form at the
-            <a [routerLink]="['/contact']" fragment="createProject" class="linkBGdark">contact page</a>.
-        </div>
-    </div>
-</footer>
+<app-footer></app-footer>
