--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,7 +43,7 @@ $textFontGeneral: "MavenPro-Regular";
   box-sizing: border-box;
 }
 body {
-  background-color: gray;
+  background-color: #35373e;
   font-family: $textFontGeneral;
   margin: 0px;
   overflow-x: hidden;
