--- a/src/app/components/mega-text-video/mega-text-video.component.scss
+++ b/src/app/components/mega-text-video/mega-text-video.component.scss
@@ -77,10 +77,11 @@ svg > text {
 }
 .subTitleProjectWord{
   font-family: $textFontGeneral;
-  margin-left: 5%;
+  //margin-left: 5%;
   color: $TextColorGlobalSecundary;
   position: relative;
   top: 160px;
+  left: calc(50% + 136px);
   z-index: 2;
 }
 .containerSubTitleProjectWord2{
@@ -94,7 +95,20 @@ svg > text {
   color: $TextColorGlobalSecundary;
 
   position: relative;
-  bottom: 50px;
-  right: 5%;
+  bottom: 55px;
+  // right: 5%;
+  right: calc(50% - 650px);
   z-index: 2;
+}
+@media (max-width: 1550px){
+  .subTitleProjectWord{
+    position: relative;
+    top: 130px;
+    left: calc(50% + 110px);
+  }
+  .subTitleProjectWord2{
+    position: relative;
+    bottom: 50px;
+    right: calc(50% - 540px);
+  }
 }
