ChatBot styles ok

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,11 +1,14 @@
-<app-header [title]="'CHAT BOT'"></app-header>
+<app-header [title]="'CHAT'" [title2]="'BOT'" [subTitle]="'Ask anything!'"
+    [subTitle2]="'Powered by ChatGPT'"></app-header>
 <div class="my-chatGPT">
     <div class="container ">
         <div class="card">
-            <div class="card-header">
-                <h1>Ale chatbot</h1><span class="subtitleItalic">Powered by ChatGPT</span>
+            <div class="card-header col-6">
+                <h1>AI chatbot</h1><span class="subtitleItalic">This is an AI assistant that is powered by ChatGPT
+                    model to deliver any AI-powered search, conversation, text completionand other advanced AI
+                    features.</span>
             </div>
-            <div class="card-body">
+            <div class="card-body mt-4">
                 <div class="container">
                     <div class="row">
                         <div class="col-12 response">
