--- a/src/app/components/mega-text-video/mega-text-video.component.html
+++ b/src/app/components/mega-text-video/mega-text-video.component.html
@@ -7,7 +7,7 @@
 
 <header #headerE1>
     <video #videoEl autoplay playsinline muted loop preload poster="">
-        <source src="" />
+        <!-- <source src="" /> -->
         <source src="../../../assets/media/videoBG.mp4" />
     </video>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 80" preserveAspectRatio="xMidYMid slice">
