Text video getting bigger WIP

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,4 +1,4 @@
-<app-header [title]="'CHAT'" [title2]="'BOT'" [subTitle]="'Ask anything!'"
+<app-header [title]="'CHATBOT'" [title2]="''" [subTitle]="'Ask anything!'"
     [subTitle2]="'Powered by ChatGPT'"></app-header>
 <div class="my-chatGPT">
     <div class="container ">
