--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,9 +10,10 @@
         </span>
         <fa-icon [icon]="faArrowDown"></fa-icon>
     </div>
-    <div id="squareTitle">
-        <section id="title" #titleNamed class="animate__animated animate__flipInX">
-            {{ title }} <br> {{ title2 }}
+    <div id="titleHeaderContainer">
+        <section id="" #titleNamed class="titleHeaderText">
+            <!-- {{ title }} <br> {{ title2 }} -->
+            {{ title }}
         </section>
         <span id="subTitle" class="animate__animated animate__rubberBand">
             {{ subTitle }} <br> {{ subTitle2 }}
