--- a/src/styles.scss
+++ b/src/styles.scss
@@ -190,6 +190,24 @@ header {
   flex-direction: column;
   z-index: 3;
 }
+.titleHeaderContainer{
+  width: 100%;
+  justify-content: center;
+  margin: 0;
+}
+
+.titleHeaderText{
+  font-family: $titleImpactFont;
+  color: $TextColorGlobalSecundary;
+  text-align: center;
+  width: 100%;
+  font-size: 25em;
+  letter-spacing: -15px;
+  transition: all 1000ms ease;
+  position: absolute;
+  bottom: 0%;
+  line-height: 80%;
+}
 #title {
   font-family: $titleFont;
   font-weight: 500;
@@ -348,7 +366,7 @@ nav {
 
 #btnsMenu {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   width: 85%;
 }
 
@@ -692,15 +710,15 @@ form input[type="submit"]:hover {
 
 
 /********************************************CONTACT**************************************/
-#imgContactProject {
-  margin: 0;
-  width: 50%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)),
-     url("./assets/media/LAcaliformiaMap.jpg");
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
+ #imgContactProject {
+   margin: 0;
+   width: 50%;
+   background-image: url("./assets/media/LAcaliformiaMap.jpg");
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
 #faMapMarkerAlt{
   color: $backgroundColorDarkPrimary;
   font-size: 3rem;
@@ -709,141 +727,6 @@ form input[type="submit"]:hover {
   left: calc(30% - 17px);
   z-index: 3;
   cursor: pointer;
-}
-/*effect radar*/
-@keyframes radar{
-  0%{
-      width:75px;
-      height:75px;
-      border:40px 
-      solid #fff;
-      opacity:0
-  }50%{
-      opacity:.3
-  }
-  90%{
-      width:250px;
-      height:250px
-  }
-  100%{
-      border:2px 
-      solid #fff;
-      opacity:0.2
-  }100%{
-      width:350px;
-      height:350px
-  }
-}
-
-.radar {
-  position: absolute;
-  top: 155%;
-  left: 30%;
-  border-radius: 50%;
-  border: 10px solid #fff;
-  width: 150px;
-  height: 150px;
-  -webkit-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
-  -webkit-animation: radar 2s infinite;
-  animation: radar 2s infinite;
-  opacity: 0;
-}
-.radar:nth-child(2) {
-  animation-delay: .4s;
-}
-.radar:nth-child(3) {
-  animation-delay: .9s;
-}
-.radar:nth-child(4) {
-  animation-delay: .15s;
-}
-
-/*-------------toolTip--------------*/
-.tooltip{
-  display: flex;
-  background: $backgroundColorGlobalSecundary;
-  border-radius: 10px;
-  box-shadow: 5px 5px 50px rgba(0, 0, 0, .30);
-  width: 31.25em;
-  z-index: 3;
-  opacity: 0;
-  transition: 400ms ease all;
-  transform: translateY(10px);
-  position: absolute;
-  top: calc(155% - 321px);
-  left: calc(30% - 349px);
-}
-
-.tooltip::after{
-  content: "";
-  display: inline-block;
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
-  border-top: 15px solid $backgroundColorGlobalSecundary;
-  position: absolute;
-  bottom: -15px;
-  left: calc(70% - 15px);
-}
-.tooltip.active{
-  opacity: 1;
-  transform: translateY(0);
-}
-.tooltip .thumb{
-  width: 40%;
-}
-.tooltip .thumb img{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 10px 0 0 10px;
-  vertical-align: top;
-}
-
-.tooltip .info{
-  width: 60%;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.tooltip .info .title{
- color: $customBlue;
- font-weight: 600;
- font-size: 1.5rem;
- margin-bottom: 10px;
-}
-.tooltip .info .resumen{
-  color: $TextColorGlobalSecundary;
-  font-size: 0.9rem;
-  margin-bottom: 20px;
- }
- .tooltip .info .adress{
-  color: $backgroundColorDarkPrimary;
-  margin-bottom: 20px;
- }
- 
- .tooltip .info button{
-    border: none;
-    background: $customBlue;
-    // font-weight: bold;
-    padding: 10px 20px;
-    width: 100%;
-    border-radius: 0 0 10px 0;
-    color: $backgroundColorGlobalPrimary;
-    cursor: none;
-   transition: all 400ms ease;
- }
- .tooltip .info button:hover{
-  background: $backgroundColorDarkPrimary;
- }
-
- .tooltip a{
-   color: $TextColorGlobalSecundary;
-   text-decoration: underline;
- }
- .tooltip a:hover{
-  text-decoration: none;
 }
 
 /******************************************PORTFOLIO***************************************/
