--- a/src/app/components/mega-text-video/mega-text-video.component.html
+++ b/src/app/components/mega-text-video/mega-text-video.component.html
@@ -1,7 +1,10 @@
 <!-- <img src="../../../assets/media/WORK.png" alt="WORK" class="mask">  -->
 <div class="containerSubTitleProjectWord">
-    <span class="subTitleProjectWord">Let me show you <a [routerLink]="['/projects']" fragment="projectsTitle"><span
-                class="linkBGdark">some of my </span></a></span>
+
+</div>
+<div class="containerSubTitleProjectWord">
+    <span class="subTitleProjectWord">Hi there! I'm Alejandro Alonzo, I'm a <a [routerLink]="['/projects']"
+            fragment="projectsTitle"><span class="linkBGdark">web developer. </span></a></span>
 </div>
 
 
@@ -10,7 +13,7 @@
         <!-- <source src="" /> -->
         <source src="../../../assets/media/videoBG.mp4" />
     </video>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 80" preserveAspectRatio="xMidYMid slice">
+    <svg #svgElement xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 80" preserveAspectRatio="xMidYMid slice">
         <defs>
             <mask id="mask" x="0" y="0" width="100%" height="100%">
                 <rect x="0" y="0" width="100%" height="100%" />
