--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,7 +1,7 @@
 <app-header [title]="'PROJECTS'"></app-header>
 <div class="portfolioPage">
     <div class="containerTitle">
-        <h2 id="projectsTitle" data-aos="fade-down" data-aos-duration="2000">
+        <h2 id="projectsTitle">
             My Projects
         </h2>
 
