improving mobile version

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,7 +2,7 @@
 <div id="createProject">
     <div id="imgContactProject">
         <iframe width="100%" height="100%"
-            src="https://api.maptiler.com/maps/a4083f5d-329e-41ef-85be-b6cfc48eab48/?key=3ya2S1TEUt3cQkhOpimh&version=v1#10.2/34.04267/-118.24567"></iframe>
+            src="https://api.maptiler.com/maps/a4083f5d-329e-41ef-85be-b6cfc48eab48/?key=3ya2S1TEUt3cQkhOpimh#10.2/33.98561/-118.16902"></iframe>
     </div>
     <div class="containerForm">
         <h3 class="titles">{{title}}</h3>
