--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -3,7 +3,7 @@
 <div class="my-chatGPT">
     <div class="container ">
         <div class="card">
-            <div class="card-header col-6">
+            <div class="card-header col-12 col-6">
                 <h1>AI chatbot</h1><span class="subtitleItalic">This is an AI assistant that is powered by ChatGPT
                     model to deliver any AI-powered search, conversation, text completionand other advanced AI
                     features.</span>
