--- a/src/app/components/particle-animation/particle-animation.component.html
+++ b/src/app/components/particle-animation/particle-animation.component.html
@@ -1,2 +1,3 @@
 <canvas #scene class="canvasBackground"></canvas>
 <input #copy id="copy" type="text" value="ALE WEB DEV" />
+<div class="canvasBackgroundTextIam">I'M</div>
