--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -2,8 +2,8 @@
     [subTitle2]="'Powered by ChatGPT'"></app-header>
 <div class="my-chatGPT">
     <div class="container ">
-        <div class="card">
-            <div class="card-header col-12 col-6">
+        <div class="card card-header">
+            <div class="card-header textAITitle col-12 col-6">
                 <h1>AI chatbot</h1><span class="subtitleItalic">This is an AI assistant that is powered by ChatGPT
                     model to deliver any AI-powered search, conversation, text completionand other advanced AI
                     features.</span>
@@ -17,8 +17,8 @@
                 </div>
                 <input [(ngModel)]="message" type="text" class="form-control my-input" name="messages"
                     placeholder="Ask me anything...">
-                <button class="btn btn-outline-primary mt-2 mr-2" (click)="sendMessage()">Submit</button>
-                <button class="btn btn-outline-danger mt-2 mr-2" (click)="clearMessage()">Clear</button>
+                <button class="btn btn-outline-primary marginBtns" (click)="sendMessage()">Submit</button>
+                <button class="btn btn-outline-danger marginBtns" (click)="clearMessage()">Clear</button>
             </div>
         </div>
     </div>
