--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -10,10 +10,6 @@ $TextColorGlobalPrimary: #35373e;
 $TextColorGlobalSecundary: #acafba;
 
 
-@import "../../../../node_modules/bootstrap/scss/bootstrap.scss";
-@import "../../../../node_modules/bootstrap/dist/css/bootstrap.css";
-
-
 .my-chatGPT{
     background-color: $backgroundColorDarkPrimary;
     width: 100%;
@@ -22,6 +18,10 @@ $TextColorGlobalSecundary: #acafba;
 .subtitleItalic{
     font-size: medium;
     color: $TextColorGlobalSecundary;
+
+}
+.textAITitle{
+    width: 50%;
 }
 .card-header{
     color: $backgroundColorGlobalSecundary;
@@ -31,6 +31,7 @@ $TextColorGlobalSecundary: #acafba;
     background-color: $TextColorGlobalSecundary;
     color: $backgroundColorDarkSecundary;
     margin-top: 20px;
+    border-color: #00ADB5;
 }
 .response{
     background-color: $backgroundColorGlobalPrimary;
@@ -39,5 +40,41 @@ $TextColorGlobalSecundary: #acafba;
     border-radius: 0.375rem;
 }
 input[type="text"]:focus {
-    color: $backgroundColorFormBox;
+    color: $backgroundColorDarkPrimary;
+  }
+ 
+
+  .btn-outline-primary {
+    background-color: #00ADB5;
+    border-color: #00ADB5;
+    color: #2d2f35;
+
+  }
+  .btn-outline-primary:hover {
+    background-color: #eeeef0;
+    border-color: #00ADB5;
+    color: #00ADB5;
+
+  }
+  
+  .btn-outline-danger {
+    background-color: #FF2E63;
+    border-color: #FF2E63;
+    color: #2d2f35;
+
+  }
+  .btn-outline-danger:hover {
+    background-color: #eeeef0;
+    border-color: #FF2E63;
+    color: #FF2E63;
+
+  }
+  .marginBtns{
+    margin: 20px 20px 0 0!important;
+  }
+
+  @media (max-width: 845px){
+    .textAITitle{
+        width: 100%;
+    }
   }
