--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,7 +43,7 @@ $textFontGeneral: "MavenPro-Regular";
   box-sizing: border-box;
 }
 body {
-  background-color: #35373e;
+  background-color: #35373e!important;
   font-family: $textFontGeneral;
   margin: 0px;
   overflow-x: hidden;
@@ -70,6 +70,9 @@ $errorRed: rgba(255, 0, 0, 0.705);
   transition: all 400ms;
 }
 
+a {
+  text-decoration: none!important;
+}
 canvas{
   background: $TextColorGlobalPrimary;
   width: 100vw;
@@ -111,7 +114,6 @@ canvas{
   transform: translate(-50%, -50%);
   z-index: 6;
 } 
-
 
 .displayNone {
   display: none;
@@ -376,6 +378,10 @@ nav {
 #btnsMenu li {
   padding-left: 2%;
 }
+ol, ul {
+  padding: 0!important;
+  margin: 0!important;
+}
 
 #homeBtnMenu {
   justify-content: start;
@@ -415,13 +421,15 @@ nav a:hover ~ .cursor{
 footer {
   display: flex;
   width: 100%;
-  height: 150px;
+  height: 180px;
   background-color: $backgroundColorDarkSecundary;
   color: $TextColorGlobalSecundary;
   justify-content: center;
 }
 .footerTextContainer {
   margin-top: 40px;
+
+  
 }
 .footerText {
   font-family: $textFontGeneral;
