--- a/src/app/components/mega-text-video/mega-text-video.component.html
+++ b/src/app/components/mega-text-video/mega-text-video.component.html
@@ -7,7 +7,9 @@
             fragment="projectsTitle"><span class="linkBGdark">web developer. // Let me show you <fa-icon
                     [icon]="faArrowRight"></fa-icon></span></a></span>
 </div>
-
+<span #playVideoButon class="playVideoButon">
+    <fa-icon [icon]="faPlayCircle "></fa-icon>
+</span>
 
 <header #headerE1>
     <video #videoEl autoplay muted loop preload poster="">
