--- a/src/app/components/mega-text-video/mega-text-video.component.html
+++ b/src/app/components/mega-text-video/mega-text-video.component.html
@@ -11,8 +11,8 @@
     <fa-icon [icon]="faPlayCircle "></fa-icon>
 </span>
 
-<header #headerE1>
-    <video #videoEl autoplay muted loop preload poster="">
+<header #headerE1 class="containerMegavideoText">
+    <video #videoEl preload autoplay loop muted playsinline>
         <!-- <source src="" /> -->
         <source src="../../../assets/media/MyWork.mp4" />
     </video>
