--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1022,6 +1022,12 @@ form input[type="submit"]:hover {
   html, body {
     overflow-x: hidden;
   }
+  .cursor2{
+    display: none;
+  }
+  .cursor{
+    display: none;
+  }
   //header-----------
   header{
     height: 625px;
@@ -1032,7 +1038,7 @@ form input[type="submit"]:hover {
   .scrollDown, .scrollDownHomeLeft span,.scrollDownHomeRight span{
     display: none;
   }
-  
+
   nav {
     height: auto;
   }
@@ -1048,14 +1054,16 @@ form input[type="submit"]:hover {
   }
   .hide{
     display: flex;
-    padding: 25px 25px 0 25px;
+    padding: 25px 25px 25px 25px;
   }
+
   .titleHeaderText {
-    font-size: 8em;
+    font-size: 5em;
     letter-spacing: -3px;
     position: absolute;
     bottom: 20%;
     line-height: 100%;
+ 
   }
   .canvasBackground{
     background: transparent;
@@ -1068,6 +1076,7 @@ form input[type="submit"]:hover {
     position: absolute;
     top: 36%;
     left: 12%;
+    display: none;
 }
 
   //about me----------
