--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
 <!-- navbar------------------------------------------------------------------------ -->
 <nav #navbar>
   <ul id="homeBtnMenu">
-    <li><a [routerLink]="['']" [routerLinkActive]="['actived']">ALE</a></li>
+    <li><a [routerLink]="['']" [routerLinkActive]="['actived']">ALEX</a></li>
   </ul>
   <ul id="btnsMenu">
     <li><a [routerLink]="['/projects']" fragment="projectsTitle" [routerLinkActive]="['actived']">PROJECTS</a></li>
