--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,6 +15,7 @@
 </div>
 
 <app-mega-text-video></app-mega-text-video>
+<div class="videoSpace"></div>
 
 
 <!-- about------------------------------------------------------------------------ -->
