--- a/src/app/components/mega-text-video/mega-text-video.component.html
+++ b/src/app/components/mega-text-video/mega-text-video.component.html
@@ -28,6 +28,8 @@
     </svg>
 </header>
 
+<div class="videoSpace" #videoSpace></div>
+
 <!-- <div class="containerSubTitleProjectWord2">
     <span class="subTitleProjectWord2">See <a [routerLink]="['/projects']" fragment="projectsTitle"><span
                 class="linkBGdark">details <fa-icon [icon]="faArrowRight"></fa-icon></span></a></span>
